# cccc

./: .gitignore  CHANGELOG.md  README.ja.md  README.md  README.zh-CN.md  SUPPORT.md  pyproject.toml
.cccc/: orchestrator_tmux.py  prompt_weaver.py
desktop/: README.md  README.zh-CN.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  remote-localhost.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docker/: .env.example  Dockerfile  docker-compose.yml
docs/: index.md
scripts/: pre_commit_checks.sh
tests/: conftest.py  test_access_tokens.py  test_actor_delivery_planner.py  test_actor_extra_prompt.py  test_actor_inbound_rendering.py  test_actor_lifecycle_ops.py  test_actor_private_env.py  test_actor_profile_resolver.py  test_actor_profiles_ops.py  test_actor_runtime_ops.py  test_assistant_ops.py  test_automation_manage_legacy_shape.py  test_automation_nudge_digest.py  test_automation_rules_constraints.py  test_bootstrap_actor_ops.py  test_bootstrap_im_ops.py  test_capability_ops.py  test_cccc_repo_handler.py  test_cccs_core_profile_events.py  test_chat_diagnostics.py  test_chat_ops.py  test_chat_post_commit.py  test_chat_reply_idempotency.py  test_chat_reply_timeout.py  test_cli_actor_daemon_error_preservation.py  test_cli_actor_profile_commands.py  test_cli_actor_profile_linkage.py  test_cli_actor_secrets_commands.py  test_cli_daemon_fallback.py  test_cli_default_entry_ownership.py  test_cli_group_set_state_stopped.py  test_cli_main.py  test_cli_reference_parity.py  (+179 more)
(+756 files in other folders)
