[package]
name    = "cccc-desktop"
version = "0.1.0"
description = "Native desktop wrapper for the CCCC web UI (Tauri v2)"
authors  = []
license  = "Apache-2.0"
edition  = "2021"
rust-version = "1.77.2"

[lib]
name       = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = [] }
tauri-plugin-log = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
log          = "0.4"

# macOS-only: native NSWindow drag support for remote-origin webviews
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
